feat: Updated terraform to deploy all the infraestructure components

--- a/controller_app/manifests/00-pod.yaml
+++ b/controller_app/manifests/00-pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: __POD_NAME__
   namespace: default
 spec:
-  serviceAccountName: scrape-sa # TBD: Create serviceaccount for usage
+  serviceAccountName: scrape-sa
   containers:
   - name: scrape-pod
     image: __IMAGE_URI__
