--- a/provisioner.yaml
+++ b/provisioner.yaml
@@ -29,7 +29,7 @@ spec:
     karpenter.sh/discovery: web-scrapping-demo
   securityGroupSelector:                      # required, when not using launchTemplate
     karpenter.sh/discovery: web-scrapping-demo
-  instanceProfile: web-scrapping-demo-managed-ondemand # optional, if already set in controller args
+  instanceProfile: karpenter-node-role # optional, if already set in controller args
   userData: |
      MIME-Version: 1.0
      Content-Type: multipart/mixed; boundary="BOUNDARY"
